--- a/Car_Price_Prediction_Model.ipynb
+++ b/Car_Price_Prediction_Model.ipynb
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1968,13 +1968,13 @@
     "plt.xlabel('Importance')\n",
     "plt.title('Technical Specifications (Engine Size, Horsepower, Fuel Type) Influence on Price')\n",
     "# Save to images folder\n",
-    "plt.savefig('images/technical_specifications_importance.png')\n",
+    "plt.savefig('images/technical_specifications_importance.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2044,13 +2044,13 @@
     "plt.xlabel('Importance')\n",
     "plt.title('Car Brands Influence on Price')\n",
     "# Save to images folder\n",
-    "plt.savefig('images/brand_importance.png')\n",
+    "plt.savefig('images/brand_importance.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -2094,13 +2094,13 @@
     "plt.xlabel('Importance')\n",
     "plt.title('Fuel Efficiency (City & Highway MPG) Influence on Price')\n",
     "# Save to images folder\n",
-    "plt.savefig('images/fuel_efficiency_importance.png')\n",
+    "plt.savefig('images/fuel_efficiency_importance.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
     "plt.xlabel('Importance')\n",
     "plt.title('Car Body Types Influence on Price')\n",
     "# Save to images folder\n",
-    "plt.savefig('images/carbody_importance.png')\n",
+    "plt.savefig('images/carbody_importance.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
