--- a/Car_Price_Prediction_Model.ipynb
+++ b/Car_Price_Prediction_Model.ipynb
@@ -2160,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2178,7 +2178,7 @@
        " 'peakrpm']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2201,7 +2201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2210,7 @@
        "<Figure size 1500x1000 with 0 Axes>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2249,7 @@
     "# Create the heatmap with Seaborn\n",
     "sns.heatmap(correlation_matrix, annot=False, cmap='coolwarm', linewidths=0.5)\n",
     "plt.title('Correlation Matrix Heatmap for Car Features')\n",
-    "plt.savefig('images/correlation_matrix_heatmap.png')\n",
+    "plt.savefig('images/correlation_matrix_heatmap.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
