Made updates to analysis and added optimization details in markdown in code

--- a/Car_Price_Prediction_Model.ipynb
+++ b/Car_Price_Prediction_Model.ipynb
@@ -1828,6 +1828,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Optimization Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model 1 (Initial model):\n",
+    "- Type: RandomForest\n",
+    "- R-squared: .9567\n",
+    "- n_estimators: 100\n",
+    "\n",
+    "Model 2 (Optimization Round 1):\n",
+    "- Type: RandomForest\n",
+    "- R-squared: .9590\n",
+    "- n_estimators: 1000\n",
+    "\n",
+    "Model 3 (Optimization Round 2):\n",
+    "- Type: GridSearch (RandomForest)\n",
+    "- R-squared: .9592\n",
+    "- Best parameters: {'max_depth': 20, 'min_samples_split': 2, 'n_estimators': 1500}\n",
+    "\n",
+    "We went with Model 2. Model 3 was not significantly higher and took longer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Feature Importance and Answering Questions"
    ]
   },
